Trabajo del martes
Añadido contador de visitas y fotos

--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+
+<body style="background-color:rgb(100, 77, 77);">
+    <h1 style="background-color:rgb(201, 201, 6);">Encabezamiento 1</h1>
+    <h2 style="background-color: green;">Encabezamiento 2</h2>
+    <h3 style="background-color: rgb(43, 226, 180);">Encabezamineto 3</h3>
+    <h4 style="background-color: darkcyan;">Encabezamiento 4</h4>
+    <h5 style="background-color: blueviolet;">Encabezamiento 5</h5>
+    <h6 style="background-color: blueviolet;">Encabezamiento 6</h6>
+    <h6 style="background-color: blueviolet;">Encabezamiento 7</h6>
+    <a style="background-color: blueviolet;" href="https://www.google.com">Enlace a Google</a>
+    <a style="background-color: blueviolet;" href="https://www.google.com">Enlace a G00gle</a>
     <p>Hola Mundo</p>
+    <ul>
+        <li style="background-color: blueviolet;">Elemento 1</li>
+        <li style="background-color: blueviolet;">Elemento 2</li>
+    </ul>
+    <ol>
+        <li style="background-color: blueviolet;">Elemento 1</li>
+        <li style="background-color: blueviolet;">Elemento 2</li>
+        <img src="./img/orangetree.png" alt="Fotografía de un bello naranjo">
+    </ol>
+    <!-- Contador de visitas -->
+    <center><a href="http://www.websmultimedia.com/contador-de-visitas-gratis" title="Contador De Visitas Gratis">
+            <img style="border: 0px solid; display: inline;" alt="contador de visitas"
+                src="http://www.websmultimedia.com/contador-de-visitas.php?id=284472"></a><br><a
+    <!-- Fin Contador de visitas -->
 </body>
+
 </html>
